--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,300,400");
 /* line 1, assets/scss/utils/_placeholders.scss */
-.woo_user_nav, .woo_user_nav__li, .cd_carousel {
+.cd_carousel {
   margin: 0;
   padding: 0;
 }
@@ -106,54 +106,66 @@ body {
 body {
   font-family: "Montserrat", sans-serif;
   color: #2f3238;
+  font-size: 1.2em;
 }
 
-/* line 11, assets/scss/base/_global.scss */
+/* line 12, assets/scss/base/_global.scss */
 h1,
 h2 {
-  font-weight: 200;
+  font-weight: 300;
 }
 
-/* line 17, assets/scss/base/_global.scss */
+/* line 18, assets/scss/base/_global.scss */
 a,
 a:hover {
   text-decoration: none;
 }
 
-/* line 22, assets/scss/base/_global.scss */
+/* line 23, assets/scss/base/_global.scss */
 .dn {
   display: none !important;
 }
 
-/* line 27, assets/scss/base/_global.scss */
+/* line 28, assets/scss/base/_global.scss */
 .fl {
   float: left !important;
 }
 
-/* line 31, assets/scss/base/_global.scss */
+/* line 32, assets/scss/base/_global.scss */
 .fr {
   float: right;
 }
 
-/* line 35, assets/scss/base/_global.scss */
+/* line 36, assets/scss/base/_global.scss */
 .fn {
   float: none;
 }
 
-/* line 39, assets/scss/base/_global.scss */
+/* line 40, assets/scss/base/_global.scss */
 .cb {
   clear: both;
 }
 
-/* line 43, assets/scss/base/_global.scss */
+/* line 44, assets/scss/base/_global.scss */
 hr {
   margin: 10px 0 10px 0;
   padding: 0;
 }
 
-/* line 48, assets/scss/base/_global.scss */
+/* line 49, assets/scss/base/_global.scss */
 a {
+  color: #666666;
+  transition: .2s ease-in-out all;
+}
+
+/* line 52, assets/scss/base/_global.scss */
+a:hover {
   color: #008d94;
+}
+
+/* line 55, assets/scss/base/_global.scss */
+a:focus {
+  text-decoration: none;
 }
 
 /* line 2, assets/scss/layout/_contact.scss */
@@ -445,52 +457,18 @@ If you don't want this, delete this segment of the CSS and delete the correspond
 /* line 1, assets/scss/layout/_footer.scss */
 .site-footer {
   background: #f7f7f7;
+  padding-top: 15px;
 }
 
-/* line 3, assets/scss/layout/_footer.scss */
+/* line 4, assets/scss/layout/_footer.scss */
 .site-footer ul {
   list-style-type: none;
   padding: 0;
 }
 
-/* line 7, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam {
-  color: #2f3238;
-  padding: 20px 0 20px 0;
-}
-
-/* line 8, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam hr {
-  border-color: #666666;
-}
-
-/* line 14, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam .footer-nav h5 {
-  text-transform: uppercase;
-  padding-bottom: 10px;
-  font-size: 16px;
-}
-
-/* line 20, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam .footer-nav ul li {
-  margin: 10px 0 0 0;
-}
-
-/* line 22, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam .footer-nav ul li a {
-  font-weight: 300;
-  font-size: 16px;
-}
-
-/* line 25, assets/scss/layout/_footer.scss */
-.site-footer .footer-cam .footer-nav ul li a:hover {
-  color: #e22980;
-}
-
-/* line 33, assets/scss/layout/_footer.scss */
-.site-footer .footer-estela {
-  background: white;
-  padding: 20px 0 0 0;
+/* line 9, assets/scss/layout/_footer.scss */
+.footer-estela {
+  padding-top: 15px;
 }
 
 /* line 2, assets/scss/layout/woocommerce/_woo-global.scss */
@@ -746,6 +724,11 @@ a.button {
   font-weight: 400 !important;
 }
 
+/* line 184, assets/scss/layout/woocommerce/_woo-global.scss */
+.woocommerce-Price-currencySymbol {
+  margin-right: 6px;
+}
+
 /* line 2, assets/scss/layout/woocommerce/_woo-gallery.scss */
 .pp_pic_holder.pp_woocommerce {
   overflow-x: visible;
@@ -802,87 +785,86 @@ div.pp_woocommerce .pp_close {
   }
 }
 
-/* line 2, assets/scss/layout/woocommerce/_woo-nav.scss */
-.woocommerce-content-cam .term-description {
-  color: #a7a7a7;
-  font-size: 0.92em;
-  display: none;
+/* line 1, assets/scss/layout/woocommerce/_woo-nav.scss */
+.woo_user_nav {
+  background: #e3e3e3;
+  height: 20px;
+  margin-bottom: 10px;
+  line-height: 160%;
 }
 
-/* line 9, assets/scss/layout/woocommerce/_woo-nav.scss */
-.woo_user_nav, .woo_user_nav__li, .cd_carousel {
+/* line 6, assets/scss/layout/woocommerce/_woo-nav.scss */
+.woo_user_nav-search {
   margin: 0;
   padding: 0;
 }
 
-/* line 13, assets/scss/layout/woocommerce/_woo-nav.scss */
-.woo_user_nav {
-  padding-top: 5px;
+/* line 11, assets/scss/layout/woocommerce/_woo-nav.scss */
+.cart-amount {
+  position: relative;
+  left: -20px;
 }
 
-/* line 16, assets/scss/layout/woocommerce/_woo-nav.scss */
-.woo_user_nav__ul {
-  list-style-type: none;
+/* line 15, assets/scss/layout/woocommerce/_woo-nav.scss */
+.bag-count {
+  z-index: 5;
+  color: white;
+  position: relative;
+  top: 18px;
+  left: 23px;
 }
 
-/* line 19, assets/scss/layout/woocommerce/_woo-nav.scss */
-.woo_user_nav__li {
-  width: 32%;
+/* line 21, assets/scss/layout/woocommerce/_woo-nav.scss */
+.bag-count__icon {
   display: inline-block;
-  cursor: pointer;
+  position: absolute;
+  margin-left: -25px;
+  width: 50px;
+  height: 50px;
+  background: url("../img/bag-icon.png") no-repeat;
 }
 
-/* line 27, assets/scss/layout/woocommerce/_woo-nav.scss */
-.cart_count .woocommerce-Price-currencySymbol {
-  color: rebeccapurple;
-  font-size: 0.92em;
-  margin: 0 5px 0 5px;
-}
-
-/* line 34, assets/scss/layout/woocommerce/_woo-nav.scss */
-.register__link,
-.current_user__link,
-.cart_count__link {
-  font-size: 12px;
+/* line 29, assets/scss/layout/woocommerce/_woo-nav.scss */
+.bag-count__disabled {
+  display: inline-block;
+  position: absolute;
+  margin-left: -25px;
+  width: 50px;
+  height: 50px;
+  background: url("../img/bag-icon-disabled.png") no-repeat;
 }
 
 /* line 38, assets/scss/layout/woocommerce/_woo-nav.scss */
-.register__link::before,
-.current_user__link::before,
-.cart_count__link::before {
-  content: "";
-  display: block;
-  float: 'left';
-  left: 0;
+.cam-search-form {
+  position: absolute;
   top: 0;
-  width: 22px;
-  height: 22px;
-  margin-right: 4px;
-  transition: .3s ease-in-out all;
+}
+
+/* line 41, assets/scss/layout/woocommerce/_woo-nav.scss */
+.cam-search-form:hover > button {
+  background: #008d94;
+  color: white;
+}
+
+/* line 45, assets/scss/layout/woocommerce/_woo-nav.scss */
+.cam-search-form input, .cam-search-form button {
+  color: #666666;
+  background: rgba(255, 255, 255, 0.4);
+  padding: 0 5px 0 5px;
+  height: 20px;
+  border: none;
 }
 
 /* line 52, assets/scss/layout/woocommerce/_woo-nav.scss */
-.current_user__link:before {
-  background: url("../img/usuario-icono.png") center no-repeat;
-  background-size: contain;
+.cam-search-form button {
+  border-left: 3px solid #e3e3e3;
+  transition: .2s ease-in-out all;
 }
 
-/* line 56, assets/scss/layout/woocommerce/_woo-nav.scss */
-.current_user__link:hover:before {
-  background: url("../img/usuario-icono-hover.png") center no-repeat;
-  background-size: contain;
-}
-
-/* line 63, assets/scss/layout/woocommerce/_woo-nav.scss */
-.cart_count__link:before {
-  background: url("../img/carrito-icono.png") center no-repeat;
-  background-size: contain;
-}
-
-/* line 67, assets/scss/layout/woocommerce/_woo-nav.scss */
-.cart_count__link:hover:before {
-  background: url("../img/carrito-icono-hover.png") center no-repeat;
-  background-size: contain;
+/* line 55, assets/scss/layout/woocommerce/_woo-nav.scss */
+.cam-search-form button:hover {
+  background: #008d94;
+  color: white;
 }
 
 /* line 6, assets/scss/layout/woocommerce/_woo-single-product.scss */
@@ -959,7 +941,6 @@ div.pp_woocommerce .pp_close {
 /* line 51, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario h1.product_title {
   font-size: 26px;
-  font-weight: 200;
 }
 
 /* line 56, assets/scss/layout/woocommerce/_woo-single-product.scss */
@@ -1118,6 +1099,134 @@ div.instacontainer .copy {
     -webkit-transform: scale3D(0.5, 0.5, 1);
             transform: scale3D(0.5, 0.5, 1);
   }
+}
+
+/* line 1, assets/scss/components/_select.scss */
+.widget_layered_nav select {
+  color: lightgrey;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid lightgrey;
+  padding-right: 2em;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+/* line 8, assets/scss/components/_select.scss */
+.widget_layered_nav select option[value='amarillo'] {
+  background: yellow;
+}
+
+/* line 12, assets/scss/components/_select.scss */
+.span-wrapper {
+  width: 100%;
+  display: inline-block;
+  position: relative;
+}
+
+/* line 16, assets/scss/components/_select.scss */
+.span-wrapper:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  right: .3em;
+  top: 10px;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-color: lightgrey transparent transparent transparent;
+}
+
+/* line 28, assets/scss/components/_select.scss */
+.select-hidden {
+  display: none;
+  visibility: hidden;
+  padding-right: 10px;
+}
+
+/* line 34, assets/scss/components/_select.scss */
+.select {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  color: #fff;
+  width: 220px;
+  height: 40px;
+}
+
+/* line 44, assets/scss/components/_select.scss */
+.select-styled {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #24b1c2;
+  padding: 8px 15px;
+  transition: all 0.2s ease-in;
+}
+
+/* line 58, assets/scss/components/_select.scss */
+.select-styled:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border: 7px solid transparent;
+  border-color: #fff transparent transparent transparent;
+  position: absolute;
+  top: 16px;
+  right: 10px;
+}
+
+/* line 69, assets/scss/components/_select.scss */
+.select-styled:hover {
+  background-color: #22a9b9;
+}
+
+/* line 71, assets/scss/components/_select.scss */
+.select-styled:active, .select-styled.active {
+  background-color: #209dac;
+}
+
+/* line 73, assets/scss/components/_select.scss */
+.select-styled:active:after, .select-styled.active:after {
+  top: 9px;
+  border-color: transparent transparent #fff transparent;
+}
+
+/* line 78, assets/scss/components/_select.scss */
+.select-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #209dac;
+}
+
+/* line 91, assets/scss/components/_select.scss */
+.select-options li {
+  margin: 0;
+  padding: 12px 0;
+  text-indent: 15px;
+  border-top: 1px solid #1c8a97;
+  transition: all 0.15s ease-in;
+}
+
+/* line 102, assets/scss/components/_select.scss */
+.select-options li:hover {
+  color: #24b1c2;
+  background: #fff;
+}
+
+/* line 107, assets/scss/components/_select.scss */
+.select-options li[rel="hide"] {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
