--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400');
+@import url('https://file.myfontastic.com/dhMhwWGPxzpYEzacwQrQrK/icons.css');
 
 /*@font-face {
   font-family: 'montserrat-regular';
