--- a/assets/scss/components/_select.scss
+++ b/assets/scss/components/_select.scss
@@ -5,8 +5,8 @@
   border: 1px solid lightgrey;
   padding-right: 2em;
   appearance: none;
-  & option[value='amarillo']{
-    background: yellow;
+  &:focus{
+    color: $gris-claro;
   }
 }
 .span-wrapper {
@@ -24,84 +24,3 @@
     border-color: lightgrey transparent transparent transparent;
   }
 }
-
-.select-hidden {
-  display: none;
-  visibility: hidden;
-  padding-right: 10px;
-}
-
-.select {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  font-size: 16px;
-  color: #fff;
-  width: 220px;
-  height: 40px;
-}
-
-.select-styled {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #24b1c2;
-  padding: 8px 15px;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.select-styled:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border: 7px solid transparent;
-  border-color: #fff transparent transparent transparent;
-  position: absolute;
-  top: 16px;
-  right: 10px;
-}
-
-.select-styled:hover { background-color: #22a9b9; }
-
-.select-styled:active, .select-styled.active { background-color: #209dac; }
-
-.select-styled:active:after, .select-styled.active:after {
-  top: 9px;
-  border-color: transparent transparent #fff transparent;
-}
-
-.select-options {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  left: 0;
-  z-index: 999;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: #209dac;
-}
-
-.select-options li {
-  margin: 0;
-  padding: 12px 0;
-  text-indent: 15px;
-  border-top: 1px solid #1c8a97;
-  -moz-transition: all 0.15s ease-in;
-  -o-transition: all 0.15s ease-in;
-  -webkit-transition: all 0.15s ease-in;
-  transition: all 0.15s ease-in;
-}
-
-.select-options li:hover {
-  color: #24b1c2;
-  background: #fff;
-}
-
-.select-options li[rel="hide"] { display: none; }
