--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -3,7 +3,25 @@
   padding-top: 15px;
   ul {
     list-style-type: none;
-    padding: 0;
+    padding: 0 0 0 20px;
+  }
+  hr{
+    border-color: $gris-superclaro;
+  }
+  &-shop-icons {
+    font-size: .9em;
+    span{
+      font-size: 2em;
+      margin-top: -5px;
+      padding-right: 6px;
+      display: inline-block;
+      float: left;
+    }
+  }
+  &-social-icons{
+    display: inline-block;
+    margin-right: 20px;
+    float: right;
   }
 }
 .footer-estela{
